<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:backgroundTint="?attr/colorSurfaceInverse"/>

        <EditText
            android:id="@+id/edt_new_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:backgroundTint="?attr/colorSurfaceInverse"/>

        <EditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:autofillHints="newPassword"
            android:backgroundTint="?attr/colorSurfaceInverse"/>

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:autofillHints="newPassword"
            android:backgroundTint="?attr/colorSurfaceInverse"/>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/create_account"/>

    </LinearLayout>
</ScrollView>
